# fs2open.github.com

./: .gitmodules  version_override.cmake
.github/workflows/: arm64-test.yaml  multi-test.yaml  sdl3-test.yaml  winarm64_test.yaml
cmake/: embed_file.cmake  toolchain-apple-clang.cmake  util.cmake
code/: CMakeLists.txt  source_groups.cmake
code/ai/: ai_profiles.cpp  aicode.cpp
code/cmdline/: cmdline.cpp  cmdline.h
code/ddsutils/: ddsutils.cpp
code/graphics/: 2d.cpp  2d.h
code/hud/: hudlock.cpp  hudshield.cpp  hudtarget.cpp
code/io/: joy-sdl.cpp
code/math/: vecmat.cpp  vecmat.h
code/menuui/: mainhallmenu.cpp  optionsmenumulti.cpp  optionsmenumulti.h  techmenu.cpp
code/mission/: missiongoals.cpp  missionparse.cpp
code/model/: model.h  modelinterp.cpp  modelread.cpp  modelrender.cpp
code/network/: gtrack.cpp  gtrack.h  multi.cpp  multi.h  multi_campaign.cpp  multi_endgame.cpp  multi_fstracker.cpp  multi_fstracker.h  multi_ingame.cpp  multi_interpolate.cpp  multi_interpolate.h  multi_log.cpp  multi_obj.cpp  multi_obj.h  multi_options.cpp  multi_options.h  multi_pause.cpp  multi_pxo.cpp  multi_respawn.cpp  multi_sw.cpp  multi_voice.cpp  multimsgs.cpp  multimsgs.h  multiui.cpp  multiui.h  multiutil.cpp  multiutil.h  psnet2.cpp  psnet2.h  ptrack.cpp  ptrack.h  valid.cpp  (+5 more)
fred2/: fredrender.cpp  management.cpp
freespace2/: CMakeLists.txt  SDLGraphicsOperations.cpp  freespace.cpp
lib/: CMakeLists.txt  FFmpeg.cmake  OpenAL.cmake
lib/libwebsockets/: CMakeLists.txt
tools/: CMakeLists.txt
tools/embedfile/: CMakeLists.txt
wxfred2/: CMakeLists.txt
(+38 files in other folders)
